# vec

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
examples/: example1.c  example2.c
examples/static_vec/: example_svec.c
examples/vec/: example_vec.c
src/: example.c
src/vec/: vec.c  vec.h
